--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "core/wsgi.py",
+        "src": "projetoestacao/wsgi.py",
         "use": "@vercel/python",
         "config": {
           "maxLambdaSize": "15mb",
@@ -20,7 +20,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "core/wsgi.py"
+        "dest": "projetoestacao/wsgi.py"
       }
     ],
     "outputDirectory": "static"
